UsabilityInitiative: Whitespaces fixes for TOC CSS
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@59316 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/css/combined.css
+++ b/extensions/UsabilityInitiative/css/combined.css
@@ -175,11 +175,11 @@ body.rtl .wikiEditor-ui-toc ul {
 	line-height: 26px;
 	padding-left: 1em;
 	border-bottom: solid 1px silver;
-	white-space:nowrap;
-	overflow:hidden;
+	white-space: nowrap;
+	overflow: hidden;
 }
-.tab-toc a{
-	outline:none;
+.tab-toc a {
+	outline: none;
 }
 .wikiEditor-ui-toc li {
 	padding: 0;
@@ -230,84 +230,86 @@ body.rtl .wikiEditor-ui-toc ul {
 /* Collapsing changes */
 
 .wikiEditor-ui-toc {
-	overflow-y:hidden;
-	position:relative;
+	overflow-y: hidden;
+	position: relative;
 }
 .wikiEditor-ui-toc ul {
-	overflow-y:auto;
-	overflow-x:hidden;
-	height:100%;
-	margin-bottom:0 !important;
+	overflow-y: auto;
+	overflow-x: hidden;
+	height: 100%;
+	margin-bottom: 0 !important;
 	
 }
 
 .wikiEditor-ui-toc ul ul {
-	float:none;
-	height:auto;
+	float: none;
+	height: auto;
 }
 #wikiEditor-ui-toc-collapse {
-	height:100%;
-	width:18px;
-	position:absolute;
-	top:0;
-	left:0;
+	height: 100%;
+	width: 18px;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 .wikiEditor-ui-toc-collapse-open {
-	background:#f3f3f3 url(../images/wikiEditor/toc/close.png) 4px 50% no-repeat;
-	border-left:1px solid #DDDDDD;
+	background: #f3f3f3 url(../images/wikiEditor/toc/close.png) 4px 50% no-repeat;
+	border-left: 1px solid #DDDDDD;
 }
 .wikiEditor-ui-toc-collapse-closed {
-	background:#f3f3f3 url(../images/wikiEditor/toc/open.png) 4px 50% no-repeat;
+	background: #f3f3f3 url(../images/wikiEditor/toc/open.png) 4px 50% no-repeat;
 }
 
 /* Resizing Changes */
 .wikiEditor-ui-toc-resize-vertical,
-.ui-resizable-w{
-	width:4px;
-	position:absolute;
-	top:0;
-	left:0;
-	height:100%;
-	cursor:ew-resize;
+.ui-resizable-w {
+	width: 4px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	cursor: ew-resize;
 }
 .wikiEditor-ui .wikiEditor-ui-right {
-	overflow:visible;
+	overflow: visible;
 }
-.wikiEditor-ui-right .ui-resizable-w{
+.wikiEditor-ui-right .ui-resizable-w {
 	left: 0px !important;
 }
 
-.wikiEditor-ui-right .wikiEditor-ui-toc-resize-grip{
-	width:5px;
-	height:12px;
-	padding:3px;
-	position:absolute;
-	top:7px;
-	left:-12px !important;
-	cursor:ew-resize;
-	background:url(../images/wikiEditor/toc/grip.png) 50% 50% no-repeat;
-}
-.wikiEditor-ui-toolbar .tab-toc{
-	float:right;
-	margin:3px 16px 3px 3px;
-	line-height:26px;
-}
-.wikiEditor-ui-toc-expandControl{
+.wikiEditor-ui-right .wikiEditor-ui-toc-resize-grip {
+	width: 5px;
+	height: 12px;
+	padding: 3px;
 	position: absolute;
-	z-index:2;
-	top:0px;
-	right:10px;
+	top: 7px;
+	left: -12px !important;
+	cursor: ew-resize;
+	background: url(../images/wikiEditor/toc/grip.png) 50% 50% no-repeat;
+}
+.wikiEditor-ui-toolbar .tab-toc {
+	float: right;
+	margin: 3px 16px 3px 3px;
+	line-height: 26px;
+}
+.wikiEditor-ui-toc-expandControl {
+	position: absolute;
+	z-index: 2;
+	top: 0px;
+	right: 10px;
 	height: 26px;
 	padding: 3px 0;
 	line-height: 26px;
 	padding-right: 1em;
-	white-space:nowrap;
-	overflow:hidden;
+	white-space: nowrap;
+	overflow: hidden;
 }
-.wikiEditor-ui-text textarea{
-	resize:none;
+.wikiEditor-ui-text textarea {
+	resize: none;
 }
-.wikiEditor-ui-text textarea:focus {outline:none;}
+.wikiEditor-ui-text textarea:focus {
+	outline: none;
+}
 
 /* wikiEditor toolbar module */
 
